change permalink fmt for new posts (keep stable links for old posts so no 404s)

--- a/blog/_posts/2015/2015-12-26-aforge.net-is-awesome.md
+++ b/blog/_posts/2015/2015-12-26-aforge.net-is-awesome.md
@@ -3,6 +3,7 @@ layout:     post
 title:      AForge.NET is awesome for complex image processing/analysis
 date:       2015-12-26 20:00:00
 tags:       ['programming']
+permalink:  /2015/12/26/aforge.net-is-awesome/
 ---
 
 I'm trying to emulate "magic color" feature that I saw in Android app called [Camscanner](https://play.google.com/store/apps/details?id=com.intsig.camscanner) (I can highly recommend this).
