--- a/content/404.md
+++ b/content/404.md
@@ -4,4 +4,4 @@ url: /404.html
 
 # 404
 
-Sorry, we can't seem to find this page's pixels.
+We can't seem to find this page's pixels. Sorry about that, chief.
